# meson

./: run_tests.py  run_unittests.py
mesonbuild/: environment.py  interpreter.py  mesonlib.py
mesonbuild/compilers/: c.py
mesonbuild/dependencies/: base.py  platform.py  ui.py
test cases/common/211 arguments apply to both/: meson.build  prog-cross.c  prog-native.c
